--- a/FoW/index.html
+++ b/FoW/index.html
@@ -56,7 +56,7 @@
 </ul>
 </nav>
 <section id="intro">
-<h2>Introduction</h2>
+<h2>1Introduction</h2>
 <p>From the beginning of our journey into flexible work, we have said that we would adjust and evolve our model. The new Treasury Board Secretariat (TSB) direction on the implementation of a common hybrid model within the federal public service means we will need to adjust our own approach to flexible work.</p>
 <p>I know that you have many questions about how this affects you. To respond to initial questions from employees, here is a list of <a href="/en/department/sadm/tina-namiesniowski/tbs_direction_qs_as.shtml">Questions and Answers</a> which will be updated as we determine how <abbr>ESDC</abbr> will implement the government-wide direction. Additional background information on the TBS directed approach to hybrid work can be found on the <a href="https://www.canada.ca/en/government/publicservice/staffing/common-hybrid-work-model-federal-public-service.html">Treasury Board of Canada Secretariat</a> website.</p>
 <p>Please be assured that we will continue to share information on the way forward as it becomes available.</p>
