--- a/FoW/index.html
+++ b/FoW/index.html
@@ -20,11 +20,11 @@
 <meta name="esdc.authorizedgroups" content="">
 <meta name="esdc.donotindex" content="">
 
-<script src="/js/esdc-template_js_en.js"></script>
+<script src="/ESDC-PRV-Test/blob/main/CSS/esdc-template_js_en.js"></script>
 
 <!-- Load closure template scripts -->
-<script src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/cdts/compiled/soyutils.js"></script>
-<script src="https://templates.service.gc.ca/rn/cls/wet/gcintranet/cdts/compiled/wet-en.js"></script>
+<script src="/ESDC-PRV-Test/CSS/template1.js"></script>
+<script src="/ESDC-PRV-Test/CSS/template2.js"></script>
 
 
 <!-- Write closure template -->
